--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-work in progress
+<html>
+    <head>
+        <title>Hamster</title>
+    </head>
+    <body>
+        <img src="hamster.png">
+        
+        My hamster
+    </body>
+</html>
